# alfred-bookmark-search-rust

./: .gitignore  AGENTS.md  ALFRED_WORKFLOW_GUIDE.md  CONTRIBUTING.md  Cargo.toml  README.md  create_alfred_workflow.sh  make_workflow.sh
.github/workflows/: ci.yml  release.yml
res/chrome-workflow/: info.plist  run.sh
scripts/: bootstrap_workflow.sh  build_workflow.sh  git_feature_flow.sh
src/: bookmark.rs  cli.rs  index_db.rs  main.rs  searcher.rs  tag_manager.rs
