[package]
name = "alfred-chrome-bookmarks"
version = "0.1.0"
authors = [ "Claude AI",]
edition = "2021"

[dependencies]
alfred = "4.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3.15"
thiserror = "1.0"
dirs = "5.0"
rusqlite = { version = "0.32", features = ["bundled"] }
fuzzy-matcher = "0.3"

[dev-dependencies]
tempfile = "3.12"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
panic = "abort"

[package.metadata.docs.rs]
targets = [ "x86_64-apple-darwin",]
